--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -38,8 +38,8 @@ layout: default
       <!-- Featured Tags -->
       {% include featured-tags.html %}
 
-      <!-- Short  -->
-      {% include short-.html %}
+      <!-- Short About -->
+      {% include short-about.html %}
 
       <!-- Friends Blog -->
       {% include friends.html %}
